--- a/dev-php/mod_php/ChangeLog
+++ b/dev-php/mod_php/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-lang/php
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-php/mod_php/ChangeLog,v 1.1 2002/07/03 17:38:44 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/mod_php/ChangeLog,v 1.2 2002/07/03 21:02:54 owen Exp $
 
   27 Apr 2002; Ryan Phillips <rphillips@gentoo.org> :
 
@@ -19,8 +19,11 @@
   Hmm, and I did not edit the ChangeLog for some reason to say that the mhash
   and mcrypt flags are encapsulated by the crypt flag now.
 
+*mod_php-4.2.1-r3 (02 Jul 2002) 
+  02 Jul 2002; Owen Stampflee <owen@gentoo.org>
+  Fixed syntax errors in use vars freetype, jpeg, tiff, png, and gd
+
 *mod_php-4.2.1-r2 (26 June 2002) 
- 
   26 June 2002; Roman Weber <gentoo@gonzo.ch> mod_php-4.2.1-r2.ebuild : 
    
   Added 'use' variables: freetype, jpeg, tiff, png and gd (Bug #3900)   
