--- a/net-www/cocoon/ChangeLog
+++ b/net-www/cocoon/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for net-www/cocoon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/cocoon/ChangeLog,v 1.1 2002/02/01 21:53:36 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/cocoon/ChangeLog,v 1.2 2002/07/04 00:23:25 karltk Exp $
+
+*cocoon-2.0.2 (25 Jun 2002)
+
+  25 Jun 2002; Sean E. Russell <ser@germane-software.com> ChangeLog files/cocoon-2.0.2.patch files/digest-cocoon-2.0.2 cocoon-2.0.2.ebuild
+
+  Upstream upgrade.  Added a patch to make cocoon compile with JDK1.4 (WRT
+  JDBC3).  The ebuild has temporary hacks to install PHP and JFOR support;
+  this will be replaced when PHP and JFOR Portage packages are available.
+  Also, JNDI support is enabled if JNDI is available.  This ebuild works with
+  both JDK1.4 and 1.3.  Tom von Schwerdtner contributed to this ebuild.
 
 *cocoon-1.8.2 (1 Feb 2002)
 
