--- a/app-text/ghostscript/ChangeLog
+++ b/app-text/ghostscript/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/ghostscript
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript/ChangeLog,v 1.8 2002/06/28 20:47:54 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript/ChangeLog,v 1.9 2002/07/04 03:17:54 g2boojum Exp $
+
+*ghostscript-7.05-r2 (03 Jul 2002)
+
+  03 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  Added HL-1250 driver.  Thanks to Bardur Arantsson
 
 *ghostscript-7.0.5-r1 (28 Jun 2002)
 
