--- a/net-p2p/kift/ChangeLog
+++ b/net-p2p/kift/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/kift
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/kift/ChangeLog,v 1.3 2002/06/25 11:25:41 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/kift/ChangeLog,v 1.4 2002/07/04 04:15:45 lostlogic Exp $
+
+*kift-0.8.1-r2 (03 Jul 2002)
+
+  03 Jul 2002; Brandon Low <lostlogic@gentoo.org> : kift-0.8.1-r2.ebuild
+
+  Updates for gcc-3.1 compatibility.
 
   26 Jun 2002; Thilo Bangert <bangert@gentoo.org> :
 
