--- a/net-mail/courier/ChangeLog
+++ b/net-mail/courier/ChangeLog
@@ -1,8 +1,9 @@
-# ChangeLog for net-mail/courier-imap
+# ChangeLog for net-mail/courier
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/net-mail/courier/ChangeLog,v 1.5 2002/05/04 03:10:05 woodchip Exp
-04.05.2002
-initial working release
-06.05.2002
-added some post install comments and a "set-mime" script which tweaks the 
-mta's default behaviour regarding MIME headers.
+# $Header: /var/cvsroot/gentoo-x86/net-mail/courier/ChangeLog,v 1.2 2002/07/04 04:17:55 g2boojum Exp $
+
+*courier-0.39.1 (04 Jul 2002)
+
+  04 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  New version, thanks to Alex Hartmann
