--- a/dev-perl/Mail-SpamAssassin/ChangeLog
+++ b/dev-perl/Mail-SpamAssassin/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Mail-SpamAssassin
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SpamAssassin/ChangeLog,v 1.3 2002/07/02 16:16:05 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SpamAssassin/ChangeLog,v 1.4 2002/07/04 05:16:57 g2boojum Exp $
+
+*Mail-SpamAssassin-2.31-r2 (04 Jul 2002)
+
+  04 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  Adding spamd init stuff (thanks to Marcelo Fontenele S Santos); removing
+  old versions
 
 *Mail-SpamAssassin-2.31-r1 (02 Jul 2002)
 
