--- a/app-text/ggv/ChangeLog
+++ b/app-text/ggv/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/ggv
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/ggv/ChangeLog,v 1.10 2002/06/30 18:48:43 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ggv/ChangeLog,v 1.11 2002/07/04 12:55:21 stroke Exp $
+
+*ggv-1.99.8 (04 Jul 2002)
+  04 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> ggv-1.99.8.ebuild :
+  New version and dependencies update.
 
 *ggv-1.1.94 (30 Jun 2002)
   30 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
