--- a/dev-util/glimmer/ChangeLog
+++ b/dev-util/glimmer/ChangeLog
@@ -1,13 +1,15 @@
 # ChangeLog for dev-util/glimmer
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/glimmer/ChangeLog,v 1.2 2002/06/03 14:23:42 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/glimmer/ChangeLog,v 1.3 2002/07/04 13:20:55 stroke Exp $
+
+*glimmer-1.2.1-r1 (04 Jul 2002)
+  04 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> glimmer-1.2.1-r1.ebuild :
+  Updated dependencies. Corrected the gnome-vfs dep to match with the Gnome1
+  version. 
 
 *glimmer-1.2.1 (3 June 2002)
-  
-  3 June 2002; Gabriele Giorgetti <stroke@gentoo.org> ChangeLog :
-
+  3 June 2002; Gabriele Giorgetti <stroke@gentoo.org> glimmer-1.2.1.ebuild :
   New version. SLOT and LICENSE have been added to the ebuild. 
-
 
 *glimmer-1.1.9.1-r1 (1 Feb 2002)
 
