--- a/net-im/ymessenger/ChangeLog
+++ b/net-im/ymessenger/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-im/ymessenger
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.4 2002/07/03 02:31:41 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.5 2002/07/04 16:23:41 gerk Exp $
+
+*ymessenger-0.99.19 (27 Jun 2002)
+
+  4 July 2002; Mark Guertin <gerk@gentoo.org>
+  ymessenger-0.99.19.ebuild :
+
+  Added ARCH check to close bug # 4452
+
+
 *ymessenger-0.99.19-r2 (02 Jul 2002)
 
   02 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
