--- a/net-mail/gotmail/ChangeLog
+++ b/net-mail/gotmail/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/gotmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/gotmail/ChangeLog,v 1.4 2002/06/14 21:15:48 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/gotmail/ChangeLog,v 1.5 2002/07/04 16:26:33 g2boojum Exp $
+
+*gotmail-0.7.2_p1 (04 Jul 2002)
+
+  04 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  New version; old versions no longer work w/ Hotmail
 
 *gotmail-0.7.1-r1 (14 Jun 2002)
 
