--- a/kde-base/kdebindings/ChangeLog
+++ b/kde-base/kdebindings/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdebindings
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebindings/ChangeLog,v 1.7 2002/07/03 07:57:21 danarmak Exp $
+# $Header:
+
+*kdebindings-3.0.2 (04 Jul 2002)
+ 
+  04 Jul 2002; phoen][x <phoenix@gentoo.org>
+
+  Added the digest.
 
 *kdebindings-3.0.2 (03 Jul 2002)
 
