--- a/net-www/opera-static/ChangeLog
+++ b/net-www/opera-static/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/opera-static
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/opera-static/ChangeLog,v 1.1 2002/05/20 07:01:52 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/opera-static/ChangeLog,v 1.2 2002/07/04 16:52:42 agenkin Exp $
+
+*opera-6.0-r1 (4 Jul 2002)
+
+  4 Jul 2002; Arcady Genkin <agenkin@thpoon.com> opera-static-6.0-r1.ebuild:
+
+  Fixed the wrapper /opt/opera/share/bin/opera to not have $D in lots of
+  places.
 
 *opera-6.0 (20 May 2002)
 
