--- a/net-misc/freeswan/ChangeLog
+++ b/net-misc/freeswan/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for net-misc/freeswan
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freeswan/ChangeLog,v 1.2 2002/06/27 10:25:22 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freeswan/ChangeLog,v 1.3 2002/07/04 19:08:27 ashmodai Exp $
+
+*freeswan-1.98 (5 Jul 2002)
+
+   5 Jul 2002; Mike Jones <ashmodai@gentoo.org>
+
+   Updated version - fixed some CFLAGS issues.
+
+*freeswan-1.97-r1 (5 Jul 2002)
+
+   20 Jun 2002; Alexander Holler <holler@ahsoftware.de>
+
+   Added X.509 Patches.
 
   27 Jun 2002; Seemant Kulleen <seemant@gentoo.org> freeswan-1.97.ebuild :
 
