--- a/x11-misc/bbconf/ChangeLog
+++ b/x11-misc/bbconf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/bbconf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/bbconf/ChangeLog,v 1.2 2002/04/11 03:32:36 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/bbconf/ChangeLog,v 1.3 2002/07/04 23:14:23 g2boojum Exp $
+
+*bbconf-1.06 (04 Jul 2002)
+
+  04 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  new version; thanks to Matt Behrens
 *bbconf-1.2-r1 (10 Apr 2002)
   10 Apr 2002; Spider <spider@gentoo.org> bbconf-1.2-r1.ebuild:
   Fix qt related configure flag.
