--- a/net-p2p/qtella/ChangeLog
+++ b/net-p2p/qtella/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/qtella
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/ChangeLog,v 1.3 2002/06/26 10:09:34 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qtella/ChangeLog,v 1.4 2002/07/04 23:48:09 verwilst Exp $
+
+*qtella-0.5.3-r1 (5 July 2002) Bart Verwilst <verwilst@gentoo.org>
+
+  Made sure that it builds as QT-only when -kde in USE. (fixes #2799)
 
 *qtella-0.5.3 (25 June 2002) Bart Verwilst <verwilst@gentoo.org>
 
