--- a/dev-python/PyQt/ChangeLog
+++ b/dev-python/PyQt/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for dev-python/PyQt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.2 2002/07/05 00:16:13 verwilst Exp $
+
+*PyQt-3.2.4 (5 July 2002) Bart Verwilst <verwilst@gentoo.org>
 
 *PyQt-3.0 (1 Feb 2002)
 
