--- a/media-gfx/k3studio/ChangeLog
+++ b/media-gfx/k3studio/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for media-gfx/k3studio
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3studio/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3studio/ChangeLog,v 1.2 2002/07/05 00:29:21 verwilst Exp $
+
+*k3studio-0.98 (5 July 2002) Bart Verwilst <verwilst@gentoo.org>
 
 *k3studio-0.97 (1 Feb 2002)
 
