--- a/sys-apps/pcmcia-cs/ChangeLog
+++ b/sys-apps/pcmcia-cs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/pcmcia-cs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.14 2002/07/02 13:11:14 chadh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.15 2002/07/05 08:46:59 cardoe Exp $
+
+*pcmcia-cs-3.1.34 (05 July 2002)
+
+  05 July 2002; Doug Goldstein <cardoe@gentoo.org> pcmcia-cs-3.1.34-r5.ebuild
+  
+  Updated to orinoco 0.12a and got rid of the errors about gentoo-3.1.34.patch missing and correted with lintool
 
 *pcmcia-cs-3.1.34 (01 July 2002)
 
