--- a/app-doc/mini-howto-html-single/ChangeLog
+++ b/app-doc/mini-howto-html-single/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-doc/mini-howto-html-single
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-doc/mini-howto-html-single/ChangeLog,v 1.1 2002/02/01 21:53:00 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/mini-howto-html-single/ChangeLog,v 1.2 2002/07/05 11:16:32 seemant Exp $
+
+*mini-howto-html-single-20020328 (5 Jul 2002)
+
+  5 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  mini-howto-html-single-20020328.ebuild
+  files/digest-mini-howto-html-single-20020328 :
+
+  Version bump.
 
 *mini-howto-html-single-20010824 (1 Feb 2002)
 
