--- a/app-doc/mini-howto-html/ChangeLog
+++ b/app-doc/mini-howto-html/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-doc/mini-howto-html
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-doc/mini-howto-html/ChangeLog,v 1.1 2002/02/01 21:53:00 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/mini-howto-html/ChangeLog,v 1.2 2002/07/05 11:15:02 seemant Exp $
+
+*mini-howto-html-20020328 (5 Jul 2002)
+
+  5 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  mini-howto-html-20020328.ebuild files/digest-mini-howto-html-20020328 :
+
+  Version bump.
 
 *mini-howto-html-20010824 (1 Feb 2002)
 
