--- a/dev-perl/sdl-perl/ChangeLog
+++ b/dev-perl/sdl-perl/ChangeLog
@@ -1,7 +1,14 @@
 # ChangeLog for dev-perl/SDL-sdlpl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/sdl-perl/ChangeLog,v 1.2 2002/06/21 22:50:19 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/sdl-perl/ChangeLog,v 1.3 2002/07/05 16:22:49 seemant Exp $
 
+
+*sdl-perl-1.18.5-r2 (5 Jul 2002)
+
+  05 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  sdl-perl-1.18.5-r2.ebuild files/digest-sdl-perl-1.18.5-r2 :
+
+  Added new media-libs/sdl-gfx to DEPEND list.
 
 *sdl-perl-1.18.5-r1 (21 Jun 2002)
 
