--- a/net-p2p/dctc/ChangeLog
+++ b/net-p2p/dctc/ChangeLog
@@ -1,7 +1,14 @@
 # ChangeLog for net-p2p/dctc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dctc/ChangeLog,v 1.2 2002/06/25 11:12:27 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dctc/ChangeLog,v 1.3 2002/07/06 06:04:26 seemant Exp $
 
+
+*dctc-0.83.1 (5 Jul 2002)
+
+  5 Jul 2002; Seemant Kulleen <seemant@gentoo.org> dctc-0.83.1.ebuild
+  files/digest-dctc-0.83.1 :
+
+  Version bump thanks to autobot@midsouth.rr.com (AutoBot) in bug #4252.
 
 *dctc-0.82.0 (4 Jun 2002)
 
