--- a/net-misc/chrony/ChangeLog
+++ b/net-misc/chrony/ChangeLog
@@ -1,6 +1,12 @@
-# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
+# ChangeLog for net-misc/Chrony
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/chrony/Changelog,v 1.1 2002/05/12 16:46:21 wmertens Exp $
+# $Header:
+
+*chrony-1.18 (12 May 2002)
+
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> chrony-1.18.ebuild:
+  Added KEYWORDS="x86".
+
 
 *chrony-1.18 (12 May 2002)
 
