--- a/net-misc/aria/ChangeLog
+++ b/net-misc/aria/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for net-misc/aria
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/aria/ChangeLog,v 1.1 2002/07/04 18:20:18 stroke Exp $
+# $Header:
+
  
+*aria-0.10.0.ebuild (04 Jul 2002)
+  
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> aria-0.10.0.ebuild : 
+  Added KEYWORDS.
+
 *aria-0.10.0.ebuild (04 Jul 2002)
   
   04 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> aria-0.10.0.ebuild : 
