--- a/net-misc/cidr/ChangeLog
+++ b/net-misc/cidr/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/cidr
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cidr/ChangeLog,v 1.1 2002/02/01 21:53:34 gbevin Exp $
+# $Header:
+
+*cidr-2.3.1 (6 July 2002)
+
+  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog cidr-2.3.1.ebuild:
+
+  Added KEYWORDS, SLOT, LICENSE.
 
 *cidr-2.3.1 (1 Feb 2002)
 
