--- a/net-misc/coccinella/ChangeLog
+++ b/net-misc/coccinella/ChangeLog
@@ -1,7 +1,15 @@
 # ChangeLog for app-office/scribus
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/net-misc/coccinella/ChangeLog,v 1.1 2002/06/11 02:01:39 bass Exp $
+# $Header:
+
+
+*coccinella-0.94 (6 Jul 2002)
+
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog coccinella-0.94.ebuild:
+  
+  Added KEYWORDS.
+
 
 *coccinella-0.94 (11 Jun 2002)
 
