--- a/net-misc/dante/ChangeLog
+++ b/net-misc/dante/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for net-misc/dante
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dante/ChangeLog,v 1.3 2002/06/07 20:45:48 woodchip Exp $
+# $Header:
+
+
+*dante-1.1.12 (6 Jul 2002)
+
+  6 Jul 2002; phoen][x <phoenix@gentoo.org> dante-1.1.12.ebuild,
+
+  Added KEYWORDS.
+
+*dante-1.1.9* (6 Jul 2002)
+
+  6 Jul 2002; phoen][x <phoenix@gentoo.org> dante-1.1.9*.ebuild,
+
+  Removing from CVS - source not available anymore.
 
 *dante-1.1.12 (7 Jun 2002)
 
