--- a/net-misc/aesop/ChangeLog
+++ b/net-misc/aesop/ChangeLog
@@ -1,13 +1,18 @@
 # ChangeLog for net-misc/aesop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header:
+# $Header: /var/cvsroot/gentoo-x86/net-misc/aesop/ChangeLog,v 1.3 2002/07/06 09:43:39 owen Exp $
 
+
+*aesop-0.4 (1 Feb 2002)
+
+  6 Jul 2002; Owen Stampflee <owen@gentoo.org> ChangeLog :
+  Added PPC To the KEYWORDS. Fixed headers on ebuild and ChangeLog
 
 *aesop-0.4 (1 Feb 2002)
 
   6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog :
   Added LICENSE, KEYWORDS, SLOT.
-
+ 
 
 *aesop-0.4 (1 Feb 2002)
 
