--- a/net-misc/ferm/ChangeLog
+++ b/net-misc/ferm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/ferm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ferm/ChangeLog,v 1.1 2002/05/26 22:37:15 lamer Exp $
+# $Header:
+
+*ferm-1.1_pre7 (06 July 2002)
+
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog, ferm-1.1_pre7.ebuild
+
+  Added KEYWORDS.
 
 *ferm-1.1_pre7 (26 May 2002)
 
