--- a/net-misc/firestarter/ChangeLog
+++ b/net-misc/firestarter/ChangeLog
@@ -1,9 +1,14 @@
 # ChangeLog for misc-net/firestarter
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/net-misc/firestarter/Changelog,v 1.6 2002/06/09 17:31:27 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/firestarter/ChangeLog,v 1.1 2002/07/06 14:30:28 phoenix Exp $
 
 *firestarter-0.8.2 (27 May 2002)
+
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> firestarter-0.8.2.ebuild:
+
+  Added KEYWORDS. Renamed Chanelog to ChangeLog.
+  
 
   09 Jun 2002; J.Alberto S.L. <bass@gentoo.org> firestarter-0.8.2.ebuild:
 
