--- a/net-misc/bk2site/ChangeLog
+++ b/net-misc/bk2site/ChangeLog
@@ -1,18 +1,12 @@
 # ChangeLog for net-misc/bk2site
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header:
-
-*bk2site-1.1.8-r1 (6 July 2002)
-
-  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog bk2site-1.1.8-r1.ebuild:
-  Added KEYWORDS, SLOT, LICENSE.
-
-*bk2site-1.1.8 (6 July 2002)
-
-  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog bk2site-1.1.8.ebuild:
-  Added KEYWORDS, SLOT, LICENSE.
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bk2site/ChangeLog,v 1.5 2002/07/06 14:36:42 phoenix Exp $
 
 *bk2site-1.1.8-r1 (5 Apr 2002)
+
+  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog bk2site-1.1.8-r1.ebuild:
+
+  Added KEYWORDS, SLOT, LICENSE.
 
   5 Apr 2002; Jon Nelson <jnelson@gentoo.org> ChangeLog,
    bk2site-1.1.8.ebuild-r1, files/ebuild.patch
@@ -20,6 +14,9 @@
   Patch Makefile.am and Makefile.in to support CXXFLAGS
   
 *bk2site-1.1.8 (5 Apr 2002)
+  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog bk2site-1.1.8.ebuild:
+
+  Added KEYWORDS, SLOT, LICENSE.
 
   5 Apr 2002; Jon Nelson <jnelson@gentoo.org> ChangeLog bk2site-1.1.8.ebuild:
 
