--- a/net-misc/bidwatcher/ChangeLog
+++ b/net-misc/bidwatcher/ChangeLog
@@ -1,12 +1,13 @@
 # ChangeLog for net-misc/bidwatcher
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bidwatcher/ChangeLog,v 1.2 2002/07/06 07:49:25 phoenix Exp $
-
-*bidwatcher-1.3.3 (6 July 2002)
-  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog bidwatcher-1.3.3.ebuild :
-  Added KEYWORDS.
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bidwatcher/ChangeLog,v 1.3 2002/07/06 14:35:09 phoenix Exp $
 
 *bidwatcher-1.3.3 (28 May 2002)
+  6 Jul 2002; phoen][x <phoenix@gentoo.org> bidwatcher-1.3.3.ebuild :
+
+  Added KEYWORDS.
+
   28 May 2002; Spider <spider@gentoo.org> ChangeLog bidwatcher-1.3.3.ebuild :
+
   Initial release from bugzilla bug. modified and updated version
   This ebuild is free target, Feel free to take over maintainance
