--- a/net-misc/cidr/ChangeLog
+++ b/net-misc/cidr/ChangeLog
@@ -1,17 +1,13 @@
 # ChangeLog for net-misc/cidr
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header:
-
-*cidr-2.3.1 (6 July 2002)
-
-  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog cidr-2.3.1.ebuild:
-
-  Added KEYWORDS, SLOT, LICENSE.
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cidr/ChangeLog,v 1.3 2002/07/06 14:42:41 phoenix Exp $
 
 *cidr-2.3.1 (1 Feb 2002)
 
+  6 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog cidr-2.3.1.ebuild:
+  Added KEYWORDS, SLOT, LICENSE.
+
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
