--- a/net-misc/coccinella/ChangeLog
+++ b/net-misc/coccinella/ChangeLog
@@ -1,19 +1,13 @@
 # ChangeLog for app-office/scribus
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author: José Alberto Suárez López <bass@gentoo.org>
-# $Header:
-
-
-*coccinella-0.94 (6 Jul 2002)
-
-  06 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog coccinella-0.94.ebuild:
-  
-  Added KEYWORDS.
-
+# $Header: /var/cvsroot/gentoo-x86/net-misc/coccinella/ChangeLog,v 1.3 2002/07/06 14:43:53 phoenix Exp $
 
 *coccinella-0.94 (11 Jun 2002)
 
-  09 Jun 2002; J. Alberto S. L. <bass@gentoo.org> coccinella-0.94.ebuild:
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog coccinella-0.94.ebuild:  
+  Added KEYWORDS.
 
+  09 Jun 2002; J. Alberto S. L. <bass@gentoo.org> coccinella-0.94.ebuild:
   The initial package.
   
