--- a/net-misc/dynfw/ChangeLog
+++ b/net-misc/dynfw/ChangeLog
@@ -1,16 +1,12 @@
 # ChangeLog for net-misc/dynfw
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header:
-
-*dynfw-1.0.1 (06 July 2002)
-
-  06 Jul 2002; phoen][x <phoenix@gentoo.org> dynfw-1.0.1.ebuild :
-
-  Added KEYWORDS, LICENSE, SLOT.
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dynfw/ChangeLog,v 1.3 2002/07/06 14:58:05 phoenix Exp $
 
 *dynfw-1.0.1 (29 Apr 2002)
 
-  29 Apr 2002; William McArthur <sandymac@gentoo.org> dynfw-1.0.1.ebuild :
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> dynfw-1.0.1.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
+  29 Apr 2002; William McArthur <sandymac@gentoo.org> dynfw-1.0.1.ebuild :
   The install.sh didn't support installing to a image directory so I copied most
   of the install.sh file into src_install and manually tweaked what was needed.
