--- a/net-misc/esms/ChangeLog
+++ b/net-misc/esms/ChangeLog
@@ -1,22 +1,17 @@
 # ChangeLog for net-misc/esms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # AUTHOR: José Alberto Suárez López <bass@gentoo.org>
-# $Header:
-
-*ems-0.9.5 (06 July 2002)
-
-  06 Jul 2002; phoen][x <phoenix@gentoo.org> ems-0.9.5.ebuild:
-
-  Added KEYWORDS.
+# $Header: /var/cvsroot/gentoo-x86/net-misc/esms/ChangeLog,v 1.2 2002/07/06 14:58:54 phoenix Exp $
 
 *ems-0.9.5 (14 May 2002)
 
-  01 JUN 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.9.5.ebuild:
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> ems-0.9.5.ebuild:
+  Added KEYWORDS.
 
+  01 JUN 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.9.5.ebuild:
   Ebuild clean
   
   01 Jun 2002; Bruce A. Locke <blocke@shivan.org> ems-0.9.5.ebuild:
-
   Fixed circular dependency issue
 
   14 May 2002; J.Alberto S.L. <bass@gentoo.org> ems-0.9.5.ebuild:
