--- a/net-misc/ferm/ChangeLog
+++ b/net-misc/ferm/ChangeLog
@@ -1,15 +1,13 @@
 # ChangeLog for net-misc/ferm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header:
-
-*ferm-1.1_pre7 (06 July 2002)
-
-  06 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog, ferm-1.1_pre7.ebuild
-
-  Added KEYWORDS.
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ferm/ChangeLog,v 1.3 2002/07/06 15:00:44 phoenix Exp $
 
 *ferm-1.1_pre7 (26 May 2002)
 
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog, ferm-1.1_pre7.ebuild
+  Added KEYWORDS.
+
   25 May 2002; Ben Lutgens <lamer@gentoo.org> ChangeLog, ferm-1.1_pre7.ebuild
-  files/digest-ferm-1.1_pre7: Initial commit to portage. 
+  files/digest-ferm-1.1_pre7: 
+  Initial commit to portage. 
  
