--- a/dev-libs/libmrproject/ChangeLog
+++ b/dev-libs/libmrproject/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libmrproject
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmrproject/ChangeLog,v 1.2 2002/05/23 19:15:17 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmrproject/ChangeLog,v 1.3 2002/07/06 20:25:39 spider Exp $
+
+*libmrproject-0.4 (06 Jul 2002)
+  06 Jul 2002; Spider <spider@gentoo.org> libmrproject-0.4.ebuild :
+  move to use debug.eclass and up the version
 
 *libmrproject-0.3 (23 May 2002)
   23 May 2002; Spider <spider@gentoo.org> libmrproject-0.3.ebuild :
