--- a/x11-base/xfree/ChangeLog
+++ b/x11-base/xfree/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/xfree
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.29 2002/07/06 15:37:20 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/ChangeLog,v 1.30 2002/07/07 00:47:29 azarah Exp $
+
+  7 Jul 2002; Martin Schlemmer <azarah@gentoo.org> xdm.start :
+
+  Resolve bug #4627.
 
   6 Jul 2002; Martin Schlemmer <azarah@gentoo.org> :
 
