--- a/dev-ruby/ruby-gtk/ChangeLog
+++ b/dev-ruby/ruby-gtk/ChangeLog
@@ -1,13 +1,12 @@
 # ChangeLog for dev-ruby/ruby-gtk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk/ChangeLog,v 1.3 2002/04/22 01:07:15 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk/ChangeLog,v 1.4 2002/07/07 01:38:21 agriffis Exp $
 
-*ruby-gtk
+*ruby-gtk-0.29 (06 Jul 2002)
 
-	21 Apr 2002; Aron Griffis <agriffis@gentoo.org> ruby-gtk-0.27.ebuild:
+	06 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-gtk-0.29.ebuild :
 
-	Modified to use unified ruby-gnome-all tarball; this allows related
-	ebuilds to use the same tarball and only download once.
+	Updated to version 0.29.  Added SLOT and LICENSE.
 
 *ruby-gtk-0.27 (13 Apr 2002)
 
