--- a/dev-ruby/ruby-libglade/ChangeLog
+++ b/dev-ruby/ruby-libglade/ChangeLog
@@ -1,13 +1,21 @@
 # ChangeLog for dev-ruby/ruby-libglade
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-libglade/ChangeLog,v 1.1 2002/05/27 10:23:03 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-libglade/ChangeLog,v 1.2 2002/07/07 01:38:21 agriffis Exp $
 
+*ruby-libglade-0.29 (06 Jul 2002)
+
+	06 Jul 2002: Aron Griffis <agriffis@gentoo.org> ruby-libglade-0.29.ebuild:
+
+	Version 0.29 is NEWER than 1.2 because it changed maintainership and was
+	rolled into the ruby-gnome package.  ruby-libglade-1.2 should never have
+	been put into Gentoo, though that wasn't obvious from the version numbers.
+	Added SLOT and LICENSE.
 
 *ruby-libglade-1.2 (27 May 2002)
 
-  27 May 2002; Seemant Kulleen <seemant@gentoo.org> ruby-libglade-1.2.ebuild
-  files/digest-ruby-libglade-1.2 :
+	27 May 2002; Seemant Kulleen <seemant@gentoo.org> ruby-libglade-1.2.ebuild
+	files/digest-ruby-libglade-1.2 :
 
-  ekarttun@cs.helsinki.fi (Einar Karttunen) submitted this much needed
-  update in bug #1258.  This version of the package is not a ruby-gnome
-  package, but actually a ruby-libglade package.
+	ekarttun@cs.helsinki.fi (Einar Karttunen) submitted this much needed
+	update in bug #1258.  This version of the package is not a ruby-gnome
+	package, but actually a ruby-libglade package.
