--- a/net-misc/freeswan/ChangeLog
+++ b/net-misc/freeswan/ChangeLog
@@ -1,28 +1,30 @@
 # ChangeLog for net-misc/freeswan
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freeswan/ChangeLog,v 1.3 2002/07/04 19:08:27 ashmodai Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freeswan/ChangeLog,v 1.4 2002/07/07 06:38:12 phoenix Exp $
 
-*freeswan-1.98 (5 Jul 2002)
+*freeswan-1.98b (5 Jul 2002)
+
+   7 Jul 2002; phoen][x <phoenix@gentoo.org> freeswan-1.98b.ebuild
+   Added KEYWORDS.
 
    5 Jul 2002; Mike Jones <ashmodai@gentoo.org>
-
    Updated version - fixed some CFLAGS issues.
 
 *freeswan-1.97-r1 (5 Jul 2002)
 
    20 Jun 2002; Alexander Holler <holler@ahsoftware.de>
-
    Added X.509 Patches.
 
-  27 Jun 2002; Seemant Kulleen <seemant@gentoo.org> freeswan-1.97.ebuild :
-
-  added dev-libs/gmp to DEPEND list per bug #3993 by
-  sam.hostetter@ise-indy.com (Sam Hostetter)
+   27 Jun 2002; Seemant Kulleen <seemant@gentoo.org> freeswan-1.97.ebuild :
+   added dev-libs/gmp to DEPEND list per bug #3993 by
+   sam.hostetter@ise-indy.com (Sam Hostetter)
 
 *freeswan-1.97 (23 May 2002)
 
-   22 May 2002; Mike Jones <ashmodai@gentoo.org> ChangeLog, freeswan-1.97.ebuild:
-   
+   7 Jul 2002; phoen][x <phoenix@gentoo.org> freeswan-1.97.ebuild
+   Added KEYWORDS.
+
+   22 May 2002; Mike Jones <ashmodai@gentoo.org> ChangeLog, freeswan-1.97.ebuild:  
    Added initial ChangeLog which should be updated whenever the package is
    updated in any way. This changelog is targetted to users. This means that the
    comments should well explained and written in clean English. The details about
