--- a/net-misc/fwbuilder/ChangeLog
+++ b/net-misc/fwbuilder/ChangeLog
@@ -1,23 +1,29 @@
 # ChangeLog for net-misc/fwbuilder
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/fwbuilder/ChangeLog,v 1.3 2002/03/30 15:23:57 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/fwbuilder/ChangeLog,v 1.4 2002/07/07 06:47:50 phoenix Exp $
 
 *fwbuilder-1.0.1 (30 Mar 2002)
 
-  30 Mar 2002; Seemant Kulleen <seemant@gentoo.org> fwbuilder-1.0.1.ebuild :
+  7 Jul 2002; phoen][x <phoenix@gentoo.org> fwbuilder-1.0.1.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
+  30 Mar 2002; Seemant Kulleen <seemant@gentoo.org> fwbuilder-1.0.1.ebuild :
   Version bump.
 
 *fwbuilder-1.0.0 (29 Mar 2002)
 
-  29 Mar 2002; Seemant Kulleen <seemant@gentoo.org> fwbuilder-1.0.0.ebuild :
+  7 Jul 2002; phoen][x <phoenix@gentoo.org> fwbuilder-1.0.0.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
+  29 Mar 2002; Seemant Kulleen <seemant@gentoo.org> fwbuilder-1.0.0.ebuild :
   Version bump, and ebuild clean up.  Thanks to Lars Jensen for the upgrade.
 
 *fwbuilder-0.9.6 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
+  7 Jul 2002; phoen][x <phoenix@gentoo.org> fwbuilder-0.9.6.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
+
+  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
