--- a/net-misc/gtkskan/ChangeLog
+++ b/net-misc/gtkskan/ChangeLog
@@ -1,11 +1,13 @@
 # ChangeLog for net-misc/gtkskan
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gtkskan/ChangeLog,v 1.1 2002/02/10 21:03:50 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gtkskan/ChangeLog,v 1.2 2002/07/07 07:23:02 phoenix Exp $
 
 *gtkskan-0.2 ( 10 Feb 2002 )
 
-  10 Feb 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ChangeLog files/digest-gtkskan-0.2 gtkskan-0.2.ebuild :
-  
+  07 Jul 2002; phoen][x <phoenix@gentoo.org> gtkskan-0.2.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
+
+  10 Feb 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ChangeLog files/digest-gtkskan-0.2 gtkskan-0.2.ebuild :  
   A 802.11 network tool. It can detect networks and services using the
   wireless extensions for Linux and reading/writing raw 802.11 frames. 
 
