--- a/net-misc/gtm/ChangeLog
+++ b/net-misc/gtm/ChangeLog
@@ -1,20 +1,29 @@
 # ChangeLog for net-misc/gtm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gtm/ChangeLog,v 1.3 2002/06/28 03:10:38 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gtm/ChangeLog,v 1.4 2002/07/07 07:27:26 phoenix Exp $
 
 *gtm-0.4.11-r2 (28 Jun 2002)
-  28 Jun 2001; Spider <spider@gentoo.org> gtm-0.4.11-r2.ebuild:
+
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> gtm-0.4.11-r2.ebuild:
+  Added KEYWORDS.
+
+  28 Jun 2002; Spider <spider@gentoo.org> gtm-0.4.11-r2.ebuild:
   make it use gnome-panel instead of gnome-core
 
 *gtm-0.4.11-r1 (28 May 2002)
-  28 May 2001; Spider <spider@gentoo.org> gtm-0.4.11-r1.ebuild:
-  Added a patch for gtm to support wget 1.8
 
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> gtm-0.4.11-r1.ebuild:
+  Added KEYWORDS.
+
+  28 May 20012 Spider <spider@gentoo.org> gtm-0.4.11-r1.ebuild:
+  Added a patch for gtm to support wget 1.8
  
 *gtm-0.4.11 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> gtm-0.4.11.ebuild:
+  Added KEYWORDS, LICENSE, SLOT.  
+
+  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
