--- a/net-misc/guarddog/ChangeLog
+++ b/net-misc/guarddog/ChangeLog
@@ -1,27 +1,33 @@
 # ChangeLog for net-misc/guarddog
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # Author Bart Verwilst <verwilst@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/net-misc/guarddog/ChangeLog,v 1.3 2002/06/28 17:59:22 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/guarddog/ChangeLog,v 1.4 2002/07/07 07:34:50 phoenix Exp $
 
 *guarddog-1.9.16 (28 Jun 2002)
 
+  07 Jul 2002; phoen][x <phoenix@gentoo.org> guarddog-1.9.16.ebuild :
+  Added KEYWORDS.
+
   28 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> guarddog-1.9.16.ebuild:
-
   Bumped new version.
-
 
 *guarddog-1.9.15 (4 May 2002)
 
-- 4 May 2002; B.Verwilst <verwilst@gentoo.org Changelog :
+  07 Jul 2002; phoen][x <phoenix@gentoo.org> guarddog-1.9.15.ebuild :
+  Added KEYWORDS, LICENSE.
 
+  4 May 2002; B.Verwilst <verwilst@gentoo.org> Changelog :
   Added 1.9.15 (release candidate of Guarddog), is now KDE 3 app..
   For KDE 2.x users, 1.9.14 is still KDE 2 enabled.   
 
+*guarddog-1.9.14 (?? ???? ????)
+
+  07 Jul 2002; phoen][x <phoenix@gentoo.org> guarddog-1.9.14.ebuild :
+  Added KEYWORDS, LICENSE.
 
 *guarddog-1.9.10 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
