Added LICENSE, KEYWORDS, SLOT to older ebuilds.  (The current ones are version 0.29)

--- a/dev-ruby/ruby-gnome/ChangeLog
+++ b/dev-ruby/ruby-gnome/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-ruby/ruby-gnome
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnome/ChangeLog,v 1.3 2002/07/07 01:38:21 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gnome/ChangeLog,v 1.4 2002/07/08 02:18:24 agriffis Exp $
 
 *ruby-gnome-0.29 (06 Jul 2002)
 
@@ -8,11 +8,19 @@
 
 	Updated to version 0.29.  Added SLOT and LICENSE.
 
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-gnome-0.29.ebuild:
+
+	Added KEYWORDS.
+
 *ruby-gnome-0.27 (21 Apr 2002)
 
 	21 Apr 2002; Aron Griffis <agriffis@gentoo.org> ruby-gnome-0.27.ebuild:
 
 	Updated to version 0.27
+
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-gnome-0.27.ebuild:
+
+	Added LICENSE, KEYWORDS, SLOT.
 
 *ruby-gnome-0.26 (1 Feb 2002)
 
