--- a/dev-ruby/ruby-gtk/ChangeLog
+++ b/dev-ruby/ruby-gtk/ChangeLog
@@ -1,12 +1,16 @@
 # ChangeLog for dev-ruby/ruby-gtk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk/ChangeLog,v 1.4 2002/07/07 01:38:21 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk/ChangeLog,v 1.5 2002/07/08 02:18:24 agriffis Exp $
 
 *ruby-gtk-0.29 (06 Jul 2002)
 
 	06 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-gtk-0.29.ebuild :
 
 	Updated to version 0.29.  Added SLOT and LICENSE.
+
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-gtk-0.29.ebuild :
+
+	Added KEYWORDS.
 
 *ruby-gtk-0.27 (13 Apr 2002)
 
@@ -16,6 +20,10 @@
 	cleaned it up slightly to allow future updates to be more flexible.
 	However, why did the ruby-gtk (ruby-gnome) people have to change the
 	naming convention?
+
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-gtk-0.27.ebuild :
+
+	Added LICENSE, KEYWORDS, SLOT.
 
 *ruby-gtk-0.26 (1 Feb 2002)
 
