--- a/dev-ruby/ruby-libglade/ChangeLog
+++ b/dev-ruby/ruby-libglade/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-ruby/ruby-libglade
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-libglade/ChangeLog,v 1.2 2002/07/07 01:38:21 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-libglade/ChangeLog,v 1.3 2002/07/08 02:18:25 agriffis Exp $
 
 *ruby-libglade-0.29 (06 Jul 2002)
 
@@ -11,6 +11,10 @@
 	been put into Gentoo, though that wasn't obvious from the version numbers.
 	Added SLOT and LICENSE.
 
+	07 Jul 2002: Aron Griffis <agriffis@gentoo.org> ruby-libglade-0.29.ebuild:
+
+	Added KEYWORDS.
+
 *ruby-libglade-1.2 (27 May 2002)
 
 	27 May 2002; Seemant Kulleen <seemant@gentoo.org> ruby-libglade-1.2.ebuild
@@ -19,3 +23,9 @@
 	ekarttun@cs.helsinki.fi (Einar Karttunen) submitted this much needed
 	update in bug #1258.  This version of the package is not a ruby-gnome
 	package, but actually a ruby-libglade package.
+
+*ruby-libglade-0.27
+
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-libglade-0.27.ebuild:
+
+	Added LICENSE, KEYWORDS, SLOT.
