--- a/dev-ruby/rexml/ChangeLog
+++ b/dev-ruby/rexml/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-ruby/rexml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.3 2002/07/02 18:06:49 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.4 2002/07/08 02:55:59 agriffis Exp $
 
 *rexml-2.3.7 (02 Jul 2002)
 
@@ -8,12 +8,20 @@
 
   New Version. Fixes #4381
   
+  07 Jul 2002; Aron Griffis <agriffis@gentoo.org> rexml-2.3.7.ebuild:
+
+  Added LICENSE, KEYWORDS, SLOT.
+
 *rexml-2.3.5 (17 Jun 2002)
 
   17 Jun 2002; Ryan Phillips <rphillips@gentoo.org> rexml-2.3.5 files/digest-rexml-2.3.5 :
 
   Updated package revision. Fixes #3799
   
+  07 Jul 2002; Aron Griffis <agriffis@gentoo.org> rexml-2.3.5.ebuild:
+
+  Added LICENSE, KEYWORDS, SLOT.
+
 *rexml-1.2.4 (13 Apr 2002)
 
   13 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> rexml-1.2.4 files/digest-rexml-1.2.4 :
@@ -24,3 +32,7 @@
   clean, intuitive API.
 
   Ebuild contributed by Aaron Malone <aaron@munge.net>.
+
+  07 Jul 2002; Aron Griffis <agriffis@gentoo.org> rexml-1.2.4.ebuild:
+
+  Added LICENSE, KEYWORDS, SLOT.
