Rename to ChangeLog

--- a/x11-misc/xrootconsole/ChangeLog
+++ b/x11-misc/xrootconsole/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for x11-misc/xrootconsole
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xrootconsole/Changelog,v 1.1 2002/05/28 13:24:09 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xrootconsole/ChangeLog,v 1.1 2002/07/08 14:44:43 aliz Exp $
 
 *xrootconsole-0.4 (28 May 2002)
 
