--- a/x11-misc/wmbatppc/ChangeLog
+++ b/x11-misc/wmbatppc/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for x11-misc/wmbatppc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmbatppc/Changelog,v 1.1 2002/06/04 14:13:54 doctomoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmbatppc/ChangeLog,v 1.1 2002/07/08 14:41:14 aliz Exp $
 
 *wmbatppc-1.0-r1 (04 Jun 2002)
 
