--- a/net-misc/kssh/ChangeLog
+++ b/net-misc/kssh/ChangeLog
@@ -1,10 +1,12 @@
 # ChangeLog for net-misc/komba2
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/kssh/ChangeLog,v 1.1 2002/04/15 22:37:30 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kssh/ChangeLog,v 1.2 2002/07/08 18:16:04 phoenix Exp $
 
 *kssh-0.6 (15 April 2002)
 
-  15 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :
-  
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> kssh-0.6.ebuild :
+  Added KEYWORDS.
+
+  15 April 2002; Bart Verwilst <verwilst@gentoo.org> ChangeLog :  
   Initial ebuild.. kssh seems good to easily log in to several ssh 
   accounts.. Have fun!
