--- a/net-misc/kluje/ChangeLog
+++ b/net-misc/kluje/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for net-misc/kluje
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/kluje/ChangeLog,v 1.1 2002/06/25 16:17:56 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kluje/ChangeLog,v 1.2 2002/07/08 17:52:25 phoenix Exp $
 
 *kluje-0.5 (25 Jun 2002)
+
+08 Jul 2002; phoen][x <phoenix@gentoo.org> kluje-0.5.ebuild:
+   Added KEYWORDS.
 
 25 Jun 2002; J.Alberto S.L. <bass@gentoo.org> kluje-0.5.ebuild:
   First relase.
