--- a/net-misc/kmyfirewall/ChangeLog
+++ b/net-misc/kmyfirewall/ChangeLog
@@ -1,11 +1,13 @@
 # ChangeLog for net-misc/kmyfirewall
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/kmyfirewall/ChangeLog,v 1.2 2002/06/07 10:36:03 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kmyfirewall/ChangeLog,v 1.3 2002/07/08 18:00:13 phoenix Exp $
 
 *kmyfirewall-0.4.4-r1.ebuild (07 Jun 2002)
 
-  07 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:
-  
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> kmyfirewall-0.4.4-r1.ebuild:
+  Added KEYWORDS.
+
+  07 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:  
   Removed redundant source inherit.eclass and SLOT="0" statements.
   New revision since the slot changed.
 
