--- a/net-misc/kphone/ChangeLog
+++ b/net-misc/kphone/ChangeLog
@@ -1,15 +1,14 @@
-# ChangeLog for net-misc/ktelnet2
+# ChangeLog for net-misc/kphone
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ktelnet2/ChangeLog,v 1.2 2002/07/08 18:17:56 phoenix Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kphone/ChangeLog,v 1.1 2002/07/08 18:10:11 phoenix Exp $
 
-*ktelnet2-0.43 (1 Feb 2002)
+*kphone-0.9.6 (08 July 2002)
 
-  08 Jul 2002; phoen][x <phoenix@gentoo.org> ktelnet2-0.43.ebuild :
-  Added KEYWORDS, LICENSE.
-
-  01 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> ChangeLog :
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
   writing correct changelogs are explained in the skel.ChangeLog file which you
   can find in the root directory of the portage repository.
+
+  Added KEYWORDS. 
