--- a/net-misc/linesrv/ChangeLog
+++ b/net-misc/linesrv/ChangeLog
@@ -1,11 +1,13 @@
 # ChangeLog for net-misc/linesrv
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/linesrv/ChangeLog,v 1.2 2002/05/04 04:11:14 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/linesrv/ChangeLog,v 1.3 2002/07/08 18:19:22 phoenix Exp $
 
 *linesrv-2.1.6-r1 (3 May 2002)
+
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> lineserv-2.1.6-r1.ebuild :
+  Added KEYWORDS.
   
-  3 May 2002; Donny Davies <woodchip@gentoo.org> :
-  
+  3 May 2002; Donny Davies <woodchip@gentoo.org> : 
   Added LICENSE, SLOT.
 
 *linesrv-2.1.6 (1 Feb 2002)
