--- a/net-misc/logjam/ChangeLog
+++ b/net-misc/logjam/ChangeLog
@@ -1,7 +1,10 @@
 # ChangeLog for net-misc/logjam
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/logjam/ChangeLog,v 1.1 2002/05/31 04:53:11 edolnx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/logjam/ChangeLog,v 1.2 2002/07/08 18:22:04 phoenix Exp $
 
 *logjam-3.0.4-r1 (30 MAY 2002)
+
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> logjam-3.0.4-r1 :
+  Added KEYWORDS, SLOT.
 
   30 MAY 2002; edolnx <edolnx@gentoo.org> Initial ebuild created. 
