--- a/net-misc/lrzsz/ChangeLog
+++ b/net-misc/lrzsz/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for net-misc/lrzsz
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/lrzsz/ChangeLog,v 1.2 2002/04/05 21:23:27 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/lrzsz/ChangeLog,v 1.3 2002/07/08 18:24:26 phoenix Exp $
 
 *lrzsz-0.12.20-r1 (5 Apr 2002)
+
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> lrzsz-0.12.20-r1.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
   5 Apr 2002; Seemant Kulleen <seemant@gentoo.org> lrzsz-0.12.20-r1.ebuild
   files/digest-lrzsz-0.12.20-r1 :
@@ -12,8 +15,10 @@
 
 *lrzsz-0.12.20 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> lrzsz-0.12.20.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
+
+  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
