--- a/net-misc/mmsclient/ChangeLog
+++ b/net-misc/mmsclient/ChangeLog
@@ -1,9 +1,11 @@
 # ChangeLog for net-misc/mmsclient
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mmsclient/ChangeLog,v 1.1 2002/03/01 21:29:58 chouser Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mmsclient/ChangeLog,v 1.2 2002/07/08 18:25:53 phoenix Exp $
 
 *mmsclient-0.0.3 (01 Mar 2002)
 
-  01 Mar 2002; Chris Houser <chouser@gentoo.org> :
+  08 Jul 2002; phoen][x <phoenix@gentoo.org> mmsclient-0.0.3.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
+  01 Mar 2002; Chris Houser <chouser@gentoo.org> :
   First Gentoo package of a simple tool for downloading mms-protocol streams
