--- a/net-misc/slidentd/ChangeLog
+++ b/net-misc/slidentd/ChangeLog
@@ -1,19 +1,18 @@
 # ChangeLog for net-misc/slidentd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/slidentd/ChangeLog,v 1.3 2002/04/29 08:41:56 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/slidentd/ChangeLog,v 1.4 2002/07/09 10:58:10 phoenix Exp $
+
+*slidentd-0.0.15 (25 Mar 2002)
+
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> slidentd-0.0.15.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
   29 Apr 2002; Thilo Bangert <bangert@gentoo.org> slidentd-0.0.15 :
-
   adjusted run file so slidentd runs with wheel group permissions (needed for grsecurity)
   added run-file
 
   25 Apr 2002; Thilo Bangert <thilo.bangert@gmx.net> slidentd-0.0.15 :
-
   fixed ucspi-tcp depandency
 
-
-*slidentd-0.0.15 (25 Mar 2002)
-
   25 Mar 2002; Thilo Bangert <thilo.bangert@gmx.net> ChangeLog :
-
   initial release ;-)
