--- a/net-misc/tsocks/ChangeLog
+++ b/net-misc/tsocks/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for net-misc/tsocks
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tsocks/ChangeLog,v 1.1 2002/06/12 03:23:50 lamer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tsocks/ChangeLog,v 1.2 2002/07/09 11:18:12 phoenix Exp $
 
 *tsocks-1.8beta4  (10 Jun 2002)
+
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> tsocks-1.8beta4.ebuild :
+  Added KEYWORDS, SLOT.
 
   10 Jun 2002; Ben Lutgens <lamer@gentoo.org> tsocks-1.8_beta4: Ebuild for
   tsocks submitted to bugs.gentoo.org by a gentoo user *THANKS*
