--- a/net-misc/vnc/ChangeLog
+++ b/net-misc/vnc/ChangeLog
@@ -1,17 +1,18 @@
 # ChangeLog for net-misc/vnc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/vnc/ChangeLog,v 1.2 2002/04/11 17:07:47 seemant Exp $
-
-  11 Apr 2002; Seemant Kulleen <seemant@gentoo.org> vnc-3.3.3-r2.ebuild :
-
-   Added X as a dependency since xmkmf is required for compilation, and that is
-   provided by X (and openmotif, but that is pointless).  Also, brought ebuild's
-   syntax up to date.  No revision bump necessary.
+# $Header: /var/cvsroot/gentoo-x86/net-misc/vnc/ChangeLog,v 1.3 2002/07/09 11:32:31 phoenix Exp $
 
 *vnc-3.3.3-r2 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> vnc-3.3.3-r2.ebuild :
+  Added KEYWORDS, LICENSE, SLOT, DESCRIPTION.
+
+  11 Apr 2002; Seemant Kulleen <seemant@gentoo.org> vnc-3.3.3-r2.ebuild :
+  Added X as a dependency since xmkmf is required for compilation, and that is
+  provided by X (and openmotif, but that is pointless).  Also, brought ebuild's
+  syntax up to date.  No revision bump necessary.
+
+  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
