--- a/net-misc/xfsamba/ChangeLog
+++ b/net-misc/xfsamba/ChangeLog
@@ -1,11 +1,13 @@
 # ChangeLog for net-misc/xfsamba
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/xfsamba/ChangeLog,v 1.1 2002/06/04 06:57:22 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/xfsamba/ChangeLog,v 1.2 2002/07/09 11:30:08 phoenix Exp $
 
 *xfsamba-0.47 (3 June 2002)
 
-  3 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> xfsamba-0.47.ebuild :
+  Added KEYWORDS, SLOT.
 
+  3 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
   Ebuild submitted by Dan Naumov <jago@telefragged.com>
   
   Added initial ChangeLog which should be updated whenever the package is
