--- a/sys-apps/schedutils/ChangeLog
+++ b/sys-apps/schedutils/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/schedutils/Changelog,v 1.1 2002/06/01 16:39:35 wmertens Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/schedutils/ChangeLog,v 1.1 2002/07/09 12:12:42 aliz Exp $
 
 *schedutils-0.0.5 (02 Jun 2002)
 
