--- a/app-misc/linux_logo/ChangeLog
+++ b/app-misc/linux_logo/ChangeLog
@@ -2,7 +2,7 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author Harri Hautakangas <harri@hautakangas.com>
 # Maintainer: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/app-misc/linux_logo/Changelog,v 1.1 2002/06/04 15:17:13 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/linux_logo/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *linux_logo-4.02 (04 Jun 2002)
 
