--- a/app-misc/mouseremote/ChangeLog
+++ b/app-misc/mouseremote/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-misc/mouseremote
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/mouseremote/Changelog,v 1.1 2002/05/09 11:30:02 blauwers Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/mouseremote/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *mouseremote-0.90-r0 (9 May 2002)
 
