--- a/app-sci/iverilog/ChangeLog
+++ b/app-sci/iverilog/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-lang/icarus_verilog
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-sci/iverilog/Changelog,v 1.1 2002/05/08 02:04:28 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/iverilog/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *icarus_verilog-0.6.1 (4/3/2002)
 
