--- a/dev-perl/DelimMatch/ChangeLog
+++ b/dev-perl/DelimMatch/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-perl/DelimMatch
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DelimMatch/Changelog,v 1.1 2002/06/01 12:35:40 blauwers Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DelimMatch/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *DelimMatch-1.4 (31 05 2002)
 
