--- a/dev-perl/HTML-Tree/ChangeLog
+++ b/dev-perl/HTML-Tree/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-perl/HTML-Tree
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Tree/Changelog,v 1.1 2002/05/14 19:19:12 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Tree/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *HTML-Tree-3.11 (14 May 2002)
 
