--- a/dev-util/gperf/ChangeLog
+++ b/dev-util/gperf/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-util/gperf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/Changelog,v 1.1 2002/04/04 03:57:13 chadh Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *gperf-2.7.2 (4/3/2002)
 
