--- a/media-sound/xmms-xosd/ChangeLog
+++ b/media-sound/xmms-xosd/ChangeLog
@@ -2,7 +2,7 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author: Stacey Keast <slik@telusplanet.net>
 # Mantainer: José Alberto Suárez López <bass@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-xosd/Changelog,v 1.1 2002/06/09 00:38:00 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-xosd/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *xmms-xosd-0.70 (08 Jun 2002)
 
