--- a/media-video/gqcam/ChangeLog
+++ b/media-video/gqcam/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for media-video/gqcam
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/gqcam/Changelog,v 1.1 2002/05/17 18:35:00 blauwers Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/gqcam/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *gqcam-0.9 (7 May 2002)
 
