--- a/sys-apps/hfsplusutils/ChangeLog
+++ b/sys-apps/hfsplusutils/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/hfsplusutils
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hfsplusutils/Changelog,v 1.2 2002/06/22 00:40:29 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hfsplusutils/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *hfsplusutils-1.0.4 (June 17, 2002)
 
