--- a/sys-apps/pbbuttonsd/ChangeLog
+++ b/sys-apps/pbbuttonsd/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/pbbuttonsd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/Changelog,v 1.6 2002/06/22 00:30:02 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pbbuttonsd/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *pbbuttons-0.4.10 (Sat Jun  8 11:38:34 EST 2002); gerk <gerk@gentoo.org>:
 
