--- a/sys-apps/powerprefs/ChangeLog
+++ b/sys-apps/powerprefs/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/powerprefs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/powerprefs/Changelog,v 1.2 2002/06/22 00:35:16 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/powerprefs/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 * powerprefs-0.2.1 - June 21 2002 Gerk (gerk@gentoo.org)
 	added ARCH check, no revision bump
