--- a/sys-apps/s3switch/ChangeLog
+++ b/sys-apps/s3switch/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/s3switch/Changelog,v 1.1 2002/05/28 19:57:25 wmertens Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/s3switch/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *s3switch-19990826 (28 May 2002)
 
