--- a/sys-apps/yaboot/ChangeLog
+++ b/sys-apps/yaboot/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/yaboot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/yaboot/Changelog,v 1.2 2002/06/22 00:20:57 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/yaboot/ChangeLog,v 1.1 2002/07/09 12:16:05 aliz Exp $
 
 *yaboot-1.3.6-r1 (June 21 2002); Gerk (gerk@gentoo.org)
 
